--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -125,7 +125,7 @@ header .scrolldown a:hover { color: #0762f9; }
 
 /* nav-wrap */
 #nav-wrap {
-   font: 12px 'opensans-bold', sans-serif;
+   font: 20px 'opensans-bold', sans-serif;
    width: 100%;
    text-transform: uppercase;
    letter-spacing: 2.5px;
@@ -230,48 +230,54 @@ ul#nav li.current a { color: #fe6928; }
 /* d. Resume Section
 /* ------------------------------------------------------------------ */
 
-#resume {
+.resume {
    background: #fff !important; 
    padding-top: 90px;
-   padding-bottom: 72px;
+   padding-bottom: 0px;
    overflow: hidden;
 }
 
-#resume a, #resume a:visited { color: #313131; }
-#resume a:hover, #resume a:focus  { color: #0762f9; }
+.resume a, .resume a:visited { color: #313131; }
+.resume a:hover, .resume a:focus  { color: #0762f9; }
 
-#resume h1 {
+.resume h1 {
    font: 18px/24px 'opensans-bold', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
 }
-#resume h1 span {
+.resume h1 span {
    border-bottom: 3px solid #0762f9;
    padding-bottom: 6px;
 }
-#resume h3 {
+.resume h3 {
    font: 25px/30px 'opensans-bold', sans-serif;
 }
 
-#resume .header-col { padding-top: 9px; }
-#resume .main-col { padding-right: 10%; }
+.resume .header-col { padding-top: 9px; }
+.resume .main-col { padding-right: 10%; }
 
-.education, .work {
+.education, .work, .skill{
+   margin-bottom: 0px;
+   padding-bottom: 20px;
+   border-bottom: 1px solid #E8E8E8;
+}
+
+.projects {
    margin-bottom: 48px;
    padding-bottom: 24px;
    border-bottom: 1px solid #E8E8E8;
 }
-#resume .info {
+.resume .info {
    font: 16px/24px 'librebaskerville-italic', serif;
    color: #6E7881;
    margin-bottom: 18px;
    margin-top: 9px;
 }
-#resume .info span {
+.resume .info span {
    margin-right: 5px;
    margin-left: 5px;
 }
-#resume .date {
+.resume .date {
    font: 15px/24px 'opensans-regular', sans-serif;
    margin-top: 6px;
 }
