Changed style for header name

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -57,6 +57,8 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
+   /* font: 90px/1.1em 'Roboto Mono', sans-serif; */
+   font-family: 'Roboto Mono' !important;
    color: #fff;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
