Changed button border and hover

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -484,7 +484,11 @@ input[type="button"] {
    -moz-border-radius: 0px;
    -webkit-border-radius: 0px;
    -khtml-border-radius: 0px;
-   border-radius: 0px;
+   border-radius: 10px;
+
+   margin-right: 5px;
+
+
 }
 
 .button:hover,
