--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -243,7 +243,10 @@ ul#nav li.current a { color: #fe6928; }
 }
 
 .resume a, .resume a:visited { color: #313131; }
-.resume a:hover, .resume a:focus  { color: #0762f9; }
+.resume a:hover, .resume a:focus  { 
+   color: #fe6928; 
+   background-color: #333 !important;
+}
 
 .resume h1 {
    font: 18px/24px 'opensans-bold', sans-serif;
