Updated to zendesk intern, added url shortener

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -9,7 +9,7 @@
    a. General Styles
    b. Header Styles
    c. About Section
-   d. Resume Section
+   d. Resume Section@
    e. Portfolio Section
    f. Call To Action Section
    g. Testimonials Section
